2006-09-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: fix compilation with anal
	c++ compilers (GSpawnFlags/int cast), remove useless memsets from 
	previous commit as pointed out by Christian Persch
	<chpe@cvs.gnome.org> (Closes: #354696), Really don't waitpid on the
	player anymore, make sure all the tests and re-init for send_fd
	and player_pid are consistent (send_fd defaults to -1,
	player_pid to 0)

2006-09-06  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: don't set the
	G_SPAWN_DO_NOT_REAP_CHILD flag, so we don't have to waitpid

2006-09-06  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: memset to zero the portions of
	memory allocated by the browser, as we can't be sure they were

2006-09-05  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: when we won't get a NewStream call
	(for an unsupported protocol for example), instanciate the viewer
	ASAP (fixes playback of video on the http://www.viftv.no website)

2006-09-05  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_smil_entry),
	(parse_smil_head), (parse_smil_entries): Use the top-level
	title from the SMIL playlist if there isn't an entry-specific
	one (Closes: #329451)

2006-09-05  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_is_asf):
	Fix possible buffer overflow that would cause a crash in the
	ASF recognition code (Closes: #354284)

2006-09-04  Bastien Nocera  <hadess@hadess.net>

	* configure.in: the nautilus extension requires gtk-2.0, not
	gtk-x11-2.0

2006-09-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-skipto.c: (totem_skipto_set_current):
	* src/totem-skipto.h: add totem_skipto_set_current()
	* src/totem.c: (on_skip_to1_activate): set the range as soon as
	we create the "Skip to..." dialogue, as well as setting the
	current time as the default (Closes: #335649)

2006-09-04  Bastien Nocera  <hadess@hadess.net>
